@@ -1,2 +1,2 @@
-EBUILD cl-decoration-meta-11.0-r4.ebuild 917 RMD160 72d6a0b7855dc21ad3ce1179003524aa4195f25d SHA1 43d3af22f4f89732793ebe27241f1f2fffa889c5 SHA256 121d3648f13470372e3d6d10aac549acc6fafccaf75ce43224625d4ac13cc73d
-MISC ChangeLog 956 RMD160 578e533f56e9e19904bb9a9febb522d3e5661e6e SHA1 471d8e718c1e670d22fd25b08b2ec27a64ad5421 SHA256 23c69c8cb0e1049da7c3c5d1cbf8b69fbed9870cf3ba204cb32c296c9f9a4b49
+EBUILD cl-decoration-meta-11.0-r5.ebuild 1025 RMD160 e94acc0357ea4b93476efd63248920fe9f1056b4 SHA1 5308c67a3a0dec7194231864a8bb67bbfc48d54d SHA256 62d6f0cae3fc8f0b5756ab1d8c366e35f6472e4c49a467b2f44d24781f2a7d10
+MISC ChangeLog 1219 RMD160 3fe0b7d8559d3fcefba7635eca20bb2df676bbd3 SHA1 5895a53c71af626a677f2ed99e8eb39a859bfa6a SHA256 2b4c70c907f145e1bc4c4df783c6323c045f9bbaf0cd925ef0375f68b389c10e
