@@ -1,6 +1,12 @@
 # ChangeLog for app-misc/cl-decoration-meta
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*cl-decoration-meta-11.0-r5 (07 Feb 2011)
+
+  07 Feb 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  -cl-decoration-meta-11.0-r4.ebuild, +cl-decoration-meta-11.0-r5.ebuild:
+  for CLD add x11-themes/oxygen-molecule and remove x11-themes/gnome-icon-theme
 
 *cl-decoration-meta-11.0-r4 (30 Nov 2010)
 
